# MyG4HW

./: CMakeLists.txt  MyG4HW.cc  README.md  clean.sh  kill.sh  plot.cc  run.mac  run_10k.mac  run_test.mac  runlocal.sh  setup_env.sh  vis.mac
include/: MyG4HWActionInitialization.hh  MyG4HWAnalysis.hh  MyG4HWDetectorConstruction.hh  MyG4HWEventAction.hh  MyG4HWPL.hh  MyG4HWPhantomParameterisation.hh  MyG4HWPhysicsList.hh  MyG4HWPrimaryGeneratorAction.hh  MyG4HWRun.hh  MyG4HWRunAction.hh  MyG4HWSD.hh  MyG4HWSteppingAction.hh  PrimaryGeneratorAction.hh  physicslist_cug4.h
src/: MyG4HWActionInitialization.cc  MyG4HWAnalysis.cc  MyG4HWDetectorConstruction.cc  MyG4HWEventAction.cc  MyG4HWPL.cc  MyG4HWPhantomParameterisation.cc  MyG4HWPhysicsList.cc  MyG4HWPrimaryGeneratorAction.cc  MyG4HWRun.cc  MyG4HWRunAction.cc  MyG4HWSD.cc  MyG4HWSteppingAction.cc  PrimaryGeneratorAction.cc  physicslist_cug4.cc
utils/: run.mac  run_10k.mac  run_test.mac  runlocal.sh  setup_env_nbeta.sh
